# ML-ETTJ26

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
conf/base/: catalog.yml  parameters.yml
docs/: public_bonds_ytm_performance_analysis.md  public_bonds_ytm_processing_methodology.md
docs/datasets/: bcb_sgs_daily.md
scripts/: run_b3_pregao_raw.py  run_b3_pregao_raw_backfill.py  run_bcb_demab_raw.py  run_bcb_raw_sgs.py  run_bcb_sgs_raw.py
sql/02_trusted/: b3_forwards_di1.sql  b3_swaps_dixpre.sql  bcb_demab.sql  bcb_sgs.sql  calendar.sql
sql/03_refined/: b3_forward_di1.sql  b3_swap_dixpre.sql  bcb_demab.sql  bcb_sgs.sql  calendar.sql
src/factory_curve/: README.md  __init__.py
src/ml_ettj26/: hooks.py  (+2 more)
study/: b3_raw_download.ipynb  extractors.ipynb  mart_tratement.ipynb  refined.ipynb  test_engine.ipynb  trusted.ipynb
tests/: test_b3_di1_refined_nodes.py  test_b3_pregao_raw.py  test_b3_pregao_raw_integration.py  test_b3_pregao_specs.py  test_b3_pricereport_di1_nodes.py  test_b3_pricereport_service_fallback.py  test_b3_swap_dipre_refined_nodes.py  test_bcb_demab_raw.py  test_bcb_demab_raw_integration.py  test_bcb_demab_specs.py  test_bcb_raw.py  test_bcb_raw_integration.py  test_bcb_sgs_raw.py  test_bcb_sgs_raw_integration.py  test_public_bonds_cashflow_dimension.py  test_public_bonds_curve_candidates_sql.py  test_public_bonds_mart_batch_nodes.py  test_public_bonds_mart_dimension_batch_nodes.py  test_public_bonds_quality_analytics.py  test_safe_parquet_dataset.py  test_swap_market_rates_lineage.py  test_swap_market_rates_zip_reader.py
(+255 files in other folders)
